# gbc

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-single-platform.yml  main.yml
include/: bus.h  cart.h  common.h  cpu.h  gbc.h  gui.h  instruct.h  instruct_ext.h  interrupt.h  mbc.h  ppu.h  timer.h
src/: bus.c  bus.h  cart.c  cart.h  common.h  cpu.c  cpu.h  gbc.c  gbc.h  gui.c  gui.h  instruct.h  interrupt.h  lcd.c  lcd.h  main.c  mbc.c  ppu.c  ppu.h  timer.c
test/: byte.py  cpu_tests.c
